Fix auth title overlapping header
Also took a pass at making the other page titles have a consistent
amount of margin.

--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,4 @@
 .title {
   color: '#006D77';
   font-size: 120px;
-  margin-top: -250px;
 }
